# voxcube

./: .cirrus.yml  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build.yml
Modules/: FindGLM.cmake  FindJsonCpp.cmake  FindSDL2_ttf.cmake
examples/: bonsai.json  pot.json  skull.json
shaders/: text.frag  text.vert  world.frag  world.vert
src/: Application.cpp  Application.h  CMakeLists.txt  ColorMap.cpp  ColorMap.h  ConfigFile.cpp  ConfigFile.h  Model.cpp  Model.h  Person.cpp  Person.h  Renderer.cpp  Renderer.h  Resources.h.in  Shader.cpp  Shader.h  TextRenderer.cpp  TextRenderer.h  Window.cpp  Window.h  main.cpp
